unpackaged/main/default/objects/FSL_Calculated_Mileage_Line_Item__c/FSL_Calculated_Mileage_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Calculated Mileage Line Item</label>
    <nameField>
        <displayFormat>CMLI - {0000}</displayFormat>
        <label>CMLI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculated Mileage Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>