unpackaged/main/default/objects/FSL_Calculated_Mileage_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Product2.ProductCode</field>
            <operation>equals</operation>
            <value>CE</value>
        </filterItems>
        <filterItems>
            <field>Product2.ProductCode</field>
            <operation>equals</operation>
            <value>CT</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Calculated Mileage Line Items</relationshipLabel>
    <relationshipName>Calculated_Mileage_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>