unpackaged/main/default/objects/FSL_Calculated_Mileage_Line_Item__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>Calculated_Mileage_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>