unpackaged/main/default/objects/FSL_Calculated_Mileage_Line_Item__c/validationRules/Max_Service_Item_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Service_Item_Cost</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Cost__c &gt; 100, BEGINS( $Profile.Name , &quot;FSL Contractor&quot; ))</errorConditionFormula>
    <errorMessage>Service Items are limited to $100 maximum. Please submit a payment request through your normal adjustment process for amounts greater than $100.</errorMessage>
</ValidationRule>