unpackaged/main/default/objects/FSL_Calculated_Mileage_Line_Item__c/validationRules/Restrict_SLI_Update_After_WO_Clear.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_SLI_Update_After_WO_Clear</fullName>
    <active>false</active>
    <errorConditionFormula>AND (ISPICKVAL( Work_Order__r.Status , &#39;Cleared&#39;),NOT($Profile.Name=&quot;System Administrator&quot;))</errorConditionFormula>
    <errorMessage>Calculated Mileage line item can not be updated if Work order is Cleared</errorMessage>
</ValidationRule>